Update file stucture

--- a/result.html
+++ b/result.html
@@ -5,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Result</title>
-  <link rel="stylesheet" href="src/order.css">
+  <link rel="stylesheet" href="src/order/order.css">
 </head>
 <body>
   <section class="result" id="result">
     <h3>You entered the following data:</h3>
   </section>
-  <script src="src/result.js"></script>
+  <script src="src/result/result.js"></script>
 </body>
 </html>
