--- a/order.html
+++ b/order.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your info</title>
-  <link rel="stylesheet" href="src/order.css">
+  <link rel="stylesheet" href="src/order/order.css">
 </head>
 <body>
   <form action="order2.html" method="GET" onsubmit="return accountCreate()">
@@ -56,6 +56,6 @@
     </section>
   </form>
 
-  <script src="src/order.js"></script>
+  <script src="src/order/order.js"></script>
 </body>
 </html>
