--- a/order2.html
+++ b/order2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your preferences</title>
-  <link rel="stylesheet" href="src/order.css">
+  <link rel="stylesheet" href="src/order/order.css">
 </head>
 <body>
   <form action="result.html" method="GET" onsubmit="return newUrl()">
@@ -64,6 +64,6 @@
     </section>
   </form>
 
-  <script src="src/order2.js"></script>
+  <script src="src/order2/order2.js"></script>
 </body>
 </html>
