--- a/order2.html
+++ b/order2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your preferences</title>
-  <link rel="stylesheet" href="src/order/order.css">
+  <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
   <form action="result.html" method="GET" onsubmit="return newUrl()">
