--- a/result.html
+++ b/result.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Result</title>
-  <link rel="stylesheet" href="src/order/order.css">
+  <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
   <section class="result" id="result">
