Update style on result page

--- a/result.html
+++ b/result.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <section class="result" id="result">
-    <h3>You entered the following data:</h3>
+    <h3 class="result-title">You entered the following data:</h3>
   </section>
   <script src="src/result/result.js"></script>
 </body>
